升级父项目版本为3.7.0，并解决由此引起的spring data elasticsearch 版本更新导致的 es 检索失败的问题；增加根据字段内容模糊查询