@@ -4,7 +4,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.dili</groupId>
 	<artifactId>logger</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
 	<name>logger</name>
 	<description>日志收集</description>
 
@@ -12,7 +11,7 @@
 	<parent>
 		<artifactId>dili-logger</artifactId>
 		<groupId>com.dili</groupId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -45,8 +44,18 @@
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+			<version>2.2.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-datasource-nacos</artifactId>
+			<version>1.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-			<version>2.2.0.RELEASE</version>
+			<version>2.2.3.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.alibaba</groupId>
@@ -57,7 +66,7 @@
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-			<version>2.2.0.RELEASE</version>
+			<version>2.2.3.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -145,17 +154,17 @@
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>commons-web</artifactId>
-			<version>1.3.2-SNAPSHOT</version>
+			<version>1.3.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>commons-server</artifactId>
-			<version>1.3.2-SNAPSHOT</version>
+			<version>1.3.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>uap-sdk</artifactId>
-			<version>2.8.2-SNAPSHOT</version>
+			<version>2.10.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>tk.mybatis</groupId>
@@ -202,34 +211,12 @@
 				<version>3.8.1</version>
 				<!-- 编译JDK版本 -->
 				<configuration>
-					<source>13</source>
-					<target>13</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>UTF-8</encoding>
 					<parameters>true</parameters>
-					<compilerArgs>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -241,24 +228,6 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.mybatis.generator</groupId>
-				<artifactId>mybatis-generator-maven-plugin</artifactId>
-				<version>1.3.7</version>
-				<configuration>
-					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
-					<overwrite>true</overwrite>
-					<verbose>true</verbose>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>com.dili</groupId>
-						<artifactId>ss-mbg</artifactId>
-						<version>${sharp-sword.version}</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
